# face_segmentation_pytorch

./: README.md  requirements-cpu.txt  requirements-gpu.txt  setup.cfg  setup.py
face_segmentation_pytorch/: __init__.py  __main__.py  caffe_pb2.py  model.py  utils.py
