# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


###############################################################################
#                                 Main library                                #
###############################################################################
[metadata]
name = face_segmentation_pytorch
author = Andres Fernandez
url = https://github.com/andres-fr/face_segmentation_pytorch
description =  PyTorch implementation of YuvalNirkin/face_segmentation
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = Apache v2.0
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
  setuptools_scm
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.7
# Dependencies of the project (semicolon/line-separated):
install_requires =
    torch >= 1.9.0, < 2.0.0
    omegaconf >= 2.2.1
    Pillow >= 7.0.0
    wget >= 3.2.0
    numpy >= 1.18.0
    protobuf >= 4.21.1
